<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiFiServer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="RSSIUnit">信号强度 [dBm]</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_Wifi">Wi-Fi 已关闭</string>
    <string name="msg_Wifi">本软件只有在Wi-Fi开启的情况下才可以使用"\n"是否开启Wi-Fi?</string>
    <string name="txt_noneWifiSingle">没有Wi-Fi信号</string>
    <string name="openWifi">开启</string>
    <string name="dismiss_Wifi">取消</string>
    <string name="setting_Wifi">去设置</string>
    <string name="menuTitle_sort">排序</string>
    <string name="sort_name">字母顺序</string>
    <string name="sort_RSSI">信号大小</string>
    <string name="title_menu_view">视图</string>
    <string name="title_menu_preferences">设置</string>
    <string name="title_menu_view_apList">接入点列表</string>
    <string name="title_menu_view_brokeWifi">破解WiFi</string>
    <string name="title_menu_view_network_topology">网络拓扑图</string>
    <string name="title_menu_view_detectionWifi">侦测WiFi</string>
    <string name="title_menu_view_locationMapWifi">WiFi地图</string>
    <string name="action_check_history_map">历史侦测</string>
    <string name="title_menu_view_radarWifi">WiFi雷达</string>
    <string name="title_menu_view_RSSIMap">信号强度图</string>
    <string name="title_menu_view_wifiFinder">寻找WiFi</string>
    <string name="but_selectAP_txt_open">打开</string>
    <string name="but_selectAP_txt_close">关闭</string>
    <string name="dialog_selectAP_title">选择接入点</string>
    <string name="dialog_filteredWifi_title">过滤Wifi</string>
    <string name="dialog_filteredWifi_posBut_text">过滤</string>
    <string name="dialog_filteredWifi_negBut_text">取消</string>
    <string name="dialog_scanInterverSelect_title">扫描间隔</string>
    <string name="look_ap_details">详情</string>
    <string name="connect_ap">连接</string>
    <string name="rssiUnit">信号强度 [dBm]</string>
    <string name="rssi_pie_chart_unit">dBm</string>
    <string name="title_activity_">Activity</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="title_activity_wifi_location">WifiLocation</string>
    <string name="title_activity_baidu_map">BaiduMap</string>
    <string name="title_activity_break_wifi">BreakWifi</string>
    <string name="wifi_dhcp">Obtaining IP address from %s</string>
    <string name="net_ip">IP: %1$s/%2$d (%3$s)</string>
    <string name="net_ssid">SSID: %s</string>
    <string name="net_mode">MODUS: %s</string>
    <string name="net_mode_wifi">WLAN (%1$s %2$s)</string>
    <string name="wifi_associating">Wifi is associating with %s</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="finder">发掘</string>
    <string name="drawer">拓扑图</string>
    <string name="action_help">帮助</string>
    <string name="action_about">关于</string>
    <string name="action_quit">退出</string>
    <string name="dialog_txt_ok">确定</string>
    <string name="dialog_txt_help">WiFi Server这款软件可以查看身边WiFi的名称及强度，帮助您了解身边的WiFi情况。查看局域网内已连接的客户端名称、MAC地址及IP。帮助您寻找WiFi源的位置。</string>
    <string name="wifi_disconnected">未连接!</string>
    <string name="wlan_disabled">未打开WLAN!</string>
    <string name="dialog_cancle">取消</string>
    <string name="txt_server_mac">服务器 MAC:\u0020</string>
    <string name="txt_server_ip">服务器 IP:\u0020</string>
    <string name="txt_local_mac">本地网卡 MAC:\u0020</string>
    <string name="txt_local_ip">本地IP:\u0020</string>
    <string name="txt_gateway">网关:\u0020</string>
    <string name="txt_DNS1">DNS1:\u0020</string>
    <string name="txt_DNS2">DNS2:\u0020</string>
    <string name="txt_hideSSID">隐藏 SSID:\u0020</string>
    <string name="txt_netmask">子网掩码:\u0020</string>
    <string name="txt_leaseDuration">租用期:\u0020</string>
    <string name="txt_linkSpeed">连接速度:\u0020</string>
    <string name="txt_security">安全性:\u0020</string>
    <string name="txt_frequency">频率:\u0020</string>
    <string name="txt_organization">供应商:\u0020</string>
    <string name="txt_MHz">\u0020MHz\u0020(\u0020</string>
    <string name="txt_GHz">\u0020GHz\u0020)</string>
    <string name="txt_second">\u0020秒\u0020(\u0020</string>
    <string name="txt_hour">\u0020小时\u0020)</string>
    <string name="txt_unknown">未知</string>
    <string name="txt_hide">隐藏</string>
    <string name="txt_yes">是</string>
    <string name="txt_no">否</string>
    <string name="break_ap">破解</string>
    <string name="is_open_ap">此wifi为开放的，不可进行破解</string>
    <string name="automatic_break_wifi">自动破解</string>
    <string name="action_check_history_point">历史侦测点</string>
</resources>
